--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <version>1.0-SNAPSHOT</version>
   <artifactId>assessment</artifactId>
   <packaging>war</packaging>
-
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -20,9 +19,19 @@
       <version>3.1.0</version>
     </dependency>
     <dependency>
+    	<groupId>com.j2html</groupId>
+    	<artifactId>j2html</artifactId>
+    	<version>1.3.0</version>
+    </dependency>
+    <dependency>
     	<groupId>org.postgresql</groupId>
     	<artifactId>postgresql</artifactId>
     	<version>42.1.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.json</groupId>
+    	<artifactId>json</artifactId>
+    	<version>20151123</version>
     </dependency>
   </dependencies>
   <build>
