--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,20 +1,18 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-    version="2.4">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+	version="2.4">
 
-    <display-name>Lunatech Assessment</display-name>
-    <description>
+	<display-name>Lunatech Assessment</display-name>
+	<description>
         Assessment for potential new hires at Lunatech.
     </description>
 
-    <servlet>
-        <servlet-name>MainServlet</servlet-name>
-        <servlet-class>Main</servlet-class>
-    </servlet>
-    
+	<servlet>
+		<servlet-name>MainServlet</servlet-name>
+		<servlet-class>Main</servlet-class>
+	</servlet>
+
 	<servlet>
 		<servlet-name>QueryServlet</servlet-name>
 		<servlet-class>Query</servlet-class>
@@ -24,19 +22,30 @@
 		<servlet-name>ReportsServlet</servlet-name>
 		<servlet-class>Reports</servlet-class>
 	</servlet>
-	
-    <servlet-mapping>
-        <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>QueryServlet</servlet-name>
-        <url-pattern>/query</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-        <servlet-name>ReportsServlet</servlet-name>
-        <url-pattern>/reports</url-pattern>
-    </servlet-mapping>
+	<servlet>
+		<servlet-name>Auto</servlet-name>
+		<servlet-class>AutoComplete</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Auto</servlet-name>
+		<url-pattern>/Auto</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet-mapping>
+		<servlet-name>MainServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>QueryServlet</servlet-name>
+		<url-pattern>/query</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>ReportsServlet</servlet-name>
+		<url-pattern>/reports</url-pattern>
+	</servlet-mapping>
 </web-app>
