--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,8 +36,12 @@
 
 	<servlet-mapping>
 		<servlet-name>MainServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/main</url-pattern>
 	</servlet-mapping>
+
+	<welcome-file-list>
+		<welcome-file>main</welcome-file>
+	</welcome-file-list>
 
 	<servlet-mapping>
 		<servlet-name>QueryServlet</servlet-name>
