--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     	<artifactId>json</artifactId>
     	<version>20151123</version>
     </dependency>
+    <dependency>
+    	<groupId>com.h2database</groupId>
+    	<artifactId>h2</artifactId>
+    	<version>1.4.197</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
